force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check inactive when contact is no longer with the related account.</description>
    <inlineHelpText>Check inactive when contact is no longer with the related account.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>