force-app/main/default/objects/Contact/fields/MassManager__AccountId__c.field-meta.xml
<CustomField>
    <fullName>MassManager__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>