force-app/main/default/objects/Contact/fields/MassManager__Boolean_Field__c.field-meta.xml
<CustomField>
    <fullName>MassManager__Boolean_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean Field</label>
    <type>Checkbox</type>
</CustomField>