force-app/main/default/objects/Contact/fields/MassManager__Date_Field__c.field-meta.xml
<CustomField>
    <fullName>MassManager__Date_Field__c</fullName>
    <label>Date Field</label>
    <type>Date</type>
</CustomField>