force-app/main/default/objects/Contact/fields/MassManager__Date_Time_Field__c.field-meta.xml
<CustomField>
    <fullName>MassManager__Date_Time_Field__c</fullName>
    <label>Date Time Field</label>
    <type>DateTime</type>
</CustomField>