force-app/main/default/objects/Contact/fields/MassManager__MultiSelect__c.field-meta.xml
<CustomField>
    <fullName>MassManager__MultiSelect__c</fullName>
    <label>MultiSelect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Choice 1</fullName>
            </value>
            <value>
                <fullName>Choice 2</fullName>
            </value>
            <value>
                <fullName>Choice 3</fullName>
            </value>
            <value>
                <fullName>Choice 4</fullName>
            </value>
            <value>
                <fullName>Choice 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>