force-app/main/default/objects/Contact/validationRules/CON001_Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CON001_Account_Required</fullName>
    <active>true</active>
    <description>Account name is required on all contact records</description>
    <errorConditionFormula>ISBLANK(AccountId)</errorConditionFormula>
    <errorMessage>Account Name is required</errorMessage>
</ValidationRule>