force-app/main/default/objects/Contact/listViews/Alexa_Open_Opportunities_Contacts.listView-meta.xml
<ListView>
    <fullName>Alexa_Open_Opportunities_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Alexa Open Opportunities Contacts</label>
</ListView>