force-app/main/default/objects/Contact/listViews/Dominion_Diamond_Ekati_ULC.listView-meta.xml
<ListView>
    <fullName>Dominion_Diamond_Ekati_ULC</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Dominion Diamond Ekati ULC</value>
    </filters>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Dominion Diamond Ekati ULC</label>
</ListView>