force-app/main/default/objects/Contact/listViews/Email_Bounce_Test.listView-meta.xml
<ListView>
    <fullName>Email_Bounce_Test</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL_BOUNCED_DATE</columns>
    <columns>CONTACT.EMAIL_BOUNCED_REASON</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL_BOUNCED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <label>Email Bounce Test</label>
</ListView>