force-app/main/default/objects/Contact/listViews/Environmental_Waste.listView-meta.xml
<ListView>
    <fullName>Environmental_Waste</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Tervita,Clean Harbors,Terapure,Secure Energy,Brenntag,Quadra,Kaliber,Novamen,BNC,Cleartech,Univar,Nalco,Hexion,Guardian and Nova Brenntag,Celanese</value>
    </filters>
    <label>Environmental Waste</label>
</ListView>