force-app/main/default/objects/Contact/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>