force-app/main/default/objects/Contact/listViews/Slurry_Pump_Campaign.listView-meta.xml
<ListView>
    <fullName>Slurry_Pump_Campaign</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Slurry Pump Campaign</label>
</ListView>