force-app/main/default/objects/Contact/listViews/Welco_Sales_Team.listView-meta.xml
<ListView>
    <fullName>Welco_Sales_Team</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Welco Expediting Ltd.</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>INACTIVE</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>contains</operation>
        <value>Account Manager,Business Development,Solution,Director</value>
    </filters>
    <label>Welco Sales Team</label>
</ListView>